lib_LIBRARIES = libas.a

libas_a_SOURCES = Feature.h Feature.cpp Exon.h Exon.cpp Gene.h Gene.cpp GeneFeature.h GeneFeature.cpp Transcript.h Transcript.cpp TranscriptFeature.h TranscriptFeature.cpp SplicingEvent.h SplicingEvent.cpp SplicingEventContainer.h SplicingEventContainer.cpp SplicingEventMatrix.h SplicingEventMatrix.cpp

include_HEADERS = Feature.h Exon.h Gene.h GeneFeature.h Transcript.h TranscriptFeature.h SplicingEventContainer.h SplicingEventMatrix.h

AM_CPPFLAGS = -I@top_srcdir@/src

